# sokol-samples

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  deno.jsonc  fibs  fibs.cmd  fibs.ts  fips  fips.yml
d3d11/: CMakeLists.txt  HandmadeMath.h  arraytex-d3d11.c  binshader-d3d11.c  binshader_fs.h  blend-d3d11.c  bufferoffsets-d3d11.c  clear-d3d11.c  cube-d3d11.c  d3d11entry.c  d3d11entry.h  dyntex-d3d11.c  imgui-d3d11.cc  inject-d3d11.c  instancing-compute-d3d11.c  instancing-d3d11.c  mipmap-d3d11.c  mrt-d3d11.c  offscreen-d3d11.c  quad-d3d11.c  texcube-d3d11.c  triangle-d3d11.c  vertexpulling-d3d11.c
d3d12/: CMakeLists.txt  arraytex-d3d12.c  binshader-d3d12.c  binshader_vs.h  blend-d3d12.c  bufferoffsets-d3d12.c  clear-d3d12.c  cube-d3d12.c  d3d12entry.c  d3d12entry.h  dyntex-d3d12.c  imgui-d3d12.cc  inject-d3d12.c  instancing-compute-d3d12.c  instancing-d3d12.c  mipmap-d3d12.c  mrt-d3d12.c  offscreen-d3d12.c  quad-d3d12.c  texcube-d3d12.c  triangle-d3d12.c  vertexpulling-d3d12.c
fibs-scripts/: common.ts  configs.ts  d3d11.ts  emscripten.ts  glfw.ts  imports.ts  libs.ts  metal.ts  sapp.ts  webpage.ts
fips-configs/: d3d11-win64-vs2017-release.yml  d3d11-win64-vscode-debug.yml  d3d11-win64-vstudio-release.yml  metal-osx-make-debug.yml  metal-osx-ninja-debug.yml  metal-osx-vscode-debug.yml  metal-osx-xcode-debug.yml  metal-osx-xcode-release.yml  osx-vscode-debug.yml  webgl2-emsc-ninja-release.yml  webgl2-wasm-ninja-release.yml
fips-files/: include.cmake
fips-verbs/: webpage.py
glfw/: CMakeLists.txt  HandmadeMath.h  arraytex-glfw.c  blend-glfw.c  bufferoffsets-glfw.c  clear-glfw.c  cube-glfw.c  dyntex-glfw.c  glfw_glue.c  glfw_glue.h  glu.h  imgui-glfw.cc  inject-glfw.c  instancing-compute-glfw.c  instancing-glfw.c  metal-glfw.m  mipmap-glfw.c  mrt-glfw.c  multiwindow-glfw.c  noninterleaved-glfw.c  offscreen-glfw.c  quad-glfw.c  sgl-test-glfw.c  texcube-glfw.c  triangle-glfw.c  uniformarrays-glfw.c  vertexpulling-glfw.c
html5/: CMakeLists.txt  arraytex-emsc.c  blend-emsc.c  bufferoffsets-emsc.c  clear-emsc.c  cube-emsc.c  dyntex-emsc.c  emsc.h  imgui-emsc.cc  inject-emsc.c  instancing-emsc.c  mipmap-emsc.c  mrt-emsc.c  noninterleaved-emsc.c  offscreen-emsc.c  quad-emsc.c  texcube-emsc.c  triangle-emsc.c
libs/: CMakeLists.txt
metal/: CMakeLists.txt  arraytex-metal.c  binshader-compile.py  binshader-metal-iphoneos.h  binshader-metal-macosx.h  binshader-metal.c  binshader-metal.h  blend-metal.c  bufferoffset-metal.c  bufferoffsets-metal.c  clear-metal.c  cube-metal.c  dyntex-metal.c  imgui-metal.cc  inject-metal.m  inject-metal.mm  instancing-compute-metal.c  instancing-metal.c  instancingcompute-metal.c  mipmap-metal.c  mrt-metal.c  noninterleaved-metal.c  offscreen-metal.c  osxentry.h  osxentry.m  quad-metal.c  releasetest-metal.c  sokol.m  sokol_gfx.m  texcube-metal.c  triangle-metal.c  vertexpulling-metal.c
osx-metal/: CMakeLists.txt  arraytex-metal.c  binshader-fs.metal  binshader-metal.c  (+19 more)
sapp/: CMakeLists.txt  CMakeLists.txt.highdpi  TopDown.h  arraytex-sapp.c  arraytex-sapp.glsl  basisu-sapp.c  blend-op-sapp.c  blend-op-sapp.glsl  blend-playground-sapp.c  blend-playground-sapp.glsl  blend-sapp.c  blend-sapp.glsl  box3d-simple-sapp.c  box3d-simple-sapp.glsl  bufferoffsets-sapp.c  bufferoffsets-sapp.glsl  cgltf-sapp.c  cgltf-sapp.glsl  cimgui-sapp.c  clear-sapp.c  compositemode-sapp.c  compositemode-sapp.glsl  compressed-textures-sapp.c  computeboids-sapp.c  computeboids-sapp.glsl  cube-sapp.c  cube-sapp.glsl  cubemap-jpeg-sapp.c  cubemap-jpeg-sapp.glsl  cubemaprt-sapp.c  cubemaprt-sapp.glsl  cursor-sapp.cc  customresolve-sapp.c  customresolve-sapp.glsl  debugtext-context-sapp.c  debugtext-context-sapp.glsl  debugtext-layers-sapp.c  debugtext-printf-sapp.c  debugtext-sapp.c  debugtext-userfont-sapp.c  (+152 more)
sapp/common/: CMakeLists.txt  args.h  common.c  common.h  fs.h  sokol.c  sokol.m
sapp/data/: basisu-assets.h  basisu-assets.yml  blend-playground-assets.yml  cgltf-assets.yml  compressed-textures-assets.h  compressed-textures-assets.yml  cubemap-jpeg-assets.yml  fontstash.yml  loadpng-assets.yml  mods.h  mods.yml  ozz-anim-assets.yml  ozz-assets.yml  ozz-skin-assets.yml  plmpeg-assets.yml  restart-assets.yml  spine-assets.yml  spritebatch-assets.yml  spritebatch-ldtk-assets.yml  texview-assets.yml
sapp/data/basisu/: README.md  baboon.basis  testcard.basis  testcard_rgba.basis
sapp/data/gltf/DamagedHelmet/: DamagedHelmet.gltf  Default_AO.basis  Default_albedo.basis  Default_emissive.basis  Default_metalRoughness.basis  Default_normal.basis  sokol-readme.txt
sapp/data/iff/: celtic_woman.iff  eiffel_tower.iff  eye.iff  gorilla.iff  kingtut.iff  paintcan.iff  space.iff  venus.iff  waterfall.iff  yacht.iff
sapp/data/ldtk/: GridVania.ldtk  TopDown.ldtk
sapp/data/ldtk/GridVania/backups/: GridVania___2021-08-03__20-01-20.backup.ldtk  GridVania___2021-08-03__20-56-03.backup.ldtk
sapp/data/texview/: kodim05.basis  kodim07.basis  kodim17.basis  kodim20.basis  kodim23.basis  sokol-readme.txt
sapp/microui/: CMakeLists.txt
sapp/sokol/: CMakeLists.txt  sokol-noentry.m  sokol-ui.cc  sokol-ui.mm  sokol.c  sokol.m
sapp/ui/: CMakeLists.txt  cube-sapp-ui.cc  dbgui.cc  dbgui.h  ui.h
tests/: CMakeLists.txt  cpp-compile-test.cc  force_dummy_backend.h  objcpp-compile-test.mm  sokol-args-test.c  sokol-audio-test.c  sokol-debugtext-test.c  sokol-fetch-test.c  sokol-gfx-test.c  sokol-gl-test.c  sokol-shape-test.c  test.h
tests/assets/: sokol-fetch-test.yml
tests/compile/: CMakeLists.txt  README.txt  impl_sokol_app_gfx.c  impl_sokol_gl.c  shader.glsl  sokol_args.c  sokol_args.cc  sokol_audio.c  sokol_audio.cc  sokol_debugtext.c  sokol_debugtext.cc  sokol_fetch.c  sokol_fetch.cc  sokol_fontstash.c  sokol_fontstash.cc  sokol_gfx.c  sokol_gfx.cc  sokol_gfx_imgui.c  sokol_gfx_imgui.cc  sokol_gl.c  sokol_gl.cc  sokol_glue.c  sokol_glue.cc  sokol_imgui.c  sokol_imgui.cc  sokol_main.c  sokol_main.cc  sokol_nuklear.c  sokol_shape.c  sokol_shape.cc  sokol_time.c
tests/functional/: CMakeLists.txt  sokol_debugtext_test.c  sokol_fetch_test.c  sokol_gl_test.c
(+301 files in other folders)
