if (FIPS_EMSCRIPTEN)
    add_definitions(-DSOKOL_GLES2)
elseif (FIPS_RASPBERRYPI)
    add_definitions(-DSOKOL_GLES2)
elseif (FIPS_ANDROID)
    add_definitions(-DSOKOL_GLES3)
elseif (SOKOL_USE_D3D11)
    add_definitions(-DSOKOL_D3D11)
elseif (SOKOL_USE_METAL)
    add_definitions(-DSOKOL_METAL)
else()
    if (FIPS_IOS)
        add_definitions(-DSOKOL_GLES3)
    else()
        add_definitions(-DSOKOL_GLCORE33)
    endif()
endif()

include_directories(common)
add_subdirectory(common)

fips_begin_app(clear-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(clear-sapp.c)
    fips_deps(common)
fips_end_app()

fips_begin_app(triangle-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(triangle-sapp.c)
    fips_deps(common)
fips_end_app()

fips_begin_app(quad-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(quad-sapp.c)
    fips_deps(common)
fips_end_app()

fips_begin_app(bufferoffsets-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(bufferoffsets-sapp.c)
    fips_deps(common)
fips_end_app()

fips_begin_app(cube-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(cube-sapp.c)
    fips_deps(common)
fips_end_app()

fips_begin_app(noninterleaved-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(noninterleaved-sapp.c)
    fips_deps(common)
fips_end_app()

fips_begin_app(texcube-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(texcube-sapp.c)
    fips_deps(common)
fips_end_app()

fips_begin_app(offscreen-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(offscreen-sapp.c)
    fips_deps(common)
fips_end_app()

fips_begin_app(instancing-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(instancing-sapp.c)
    fips_deps(common)
fips_end_app()

fips_begin_app(imgui-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(imgui-sapp.cc)
    fips_deps(common imgui)
    if (FIPS_IOS)
        fips_files(ios-info.plist)
    endif()
fips_end_app()

fips_begin_app(imgui-highdpi-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(imgui-highdpi-sapp.cc)
    fips_deps(common imgui)
    if (FIPS_IOS)
        fips_files(ios-info.plist)
    endif()
fips_end_app()

fips_begin_app(saudio-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(saudio-sapp.c)
    fips_deps(common)
    if (FIPS_IOS)
        fips_files(ios-info.plist)
    endif()
fips_end_app()

fips_begin_app(events-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(events-sapp.c)
    fips_deps(common)
    if (FIPS_IOS)
        fips_files(ios-info.plist)
    endif()
fips_end_app()

fips_begin_app(modplay-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(modplay-sapp.c)
    if (FIPS_IOS)
        fips_files(ios-info.plist)
    endif()
    fips_dir(data)
    fips_generate(FROM mods.yml TYPE dump HEADER mods.h)
    fips_deps(common libmodplug)
fips_end_app()
