# select the 3D backend for sokol_gfx.h and sokol_app.h
add_definitions(-DSOKOL_NO_DEPRECATED)
if (FIPS_EMSCRIPTEN)
    add_definitions(-DSOKOL_GLES3)
    set(slang "glsl300es")
elseif (FIPS_RASPBERRYPI)
    add_definitions(-DSOKOL_GLES2)
    set(slang "glsl100")
elseif (FIPS_ANDROID)
    add_definitions(-DSOKOL_GLES3)
    set(slang "glsl300es")
elseif (SOKOL_USE_D3D11)
    add_definitions(-DSOKOL_D3D11)
    set(slang "hlsl5")
elseif (SOKOL_USE_METAL)
    add_definitions(-DSOKOL_METAL)
    if (FIPS_IOS)
        set(slang "metal_ios")
    else()
        set(slang "metal_macos")
    endif()
else()
    if (FIPS_IOS)
        add_definitions(-DSOKOL_GLES3)
        set(slang "glsl300es")
    else()
        add_definitions(-DSOKOL_GLCORE33)
        set(slang "glsl330")
    endif()
endif()

fips_ide_group(libs)
add_subdirectory(sokol)
add_subdirectory(ui)
add_subdirectory(microui)

fips_ide_group(clear)
fips_begin_app(clear-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(clear-sapp.c)
    fips_deps(sokol)
fips_end_app()
fips_begin_app(clear-sapp-ui windowed)
    fips_vs_warning_level(3)
    fips_files(clear-sapp.c)
    fips_deps(sokol dbgui imgui)
fips_end_app()
target_compile_definitions(clear-sapp-ui PRIVATE USE_DBG_UI)

fips_ide_group(triangle)
fips_begin_app(triangle-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(triangle-sapp.c)
    sokol_shader(triangle-sapp.glsl ${slang})
    fips_deps(sokol)
fips_end_app()
fips_begin_app(triangle-sapp-ui windowed)
    fips_vs_warning_level(3)
    fips_files(triangle-sapp.c)
    fips_deps(sokol dbgui imgui)
fips_end_app()
target_compile_definitions(triangle-sapp-ui PRIVATE USE_DBG_UI)

fips_ide_group(quad)
fips_begin_app(quad-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(quad-sapp.c)
    fips_deps(sokol)
fips_end_app()
fips_begin_app(quad-sapp-ui windowed)
    fips_vs_warning_level(3)
    fips_files(quad-sapp.c)
    fips_deps(sokol dbgui imgui)
fips_end_app()
target_compile_definitions(quad-sapp-ui PRIVATE USE_DBG_UI)

fips_ide_group(bufferoffsets)
fips_begin_app(bufferoffsets-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(bufferoffsets-sapp.c)
    fips_deps(sokol)
fips_end_app()
fips_begin_app(bufferoffsets-sapp-ui windowed)
    fips_vs_warning_level(3)
    fips_files(bufferoffsets-sapp.c)
    fips_deps(sokol dbgui imgui)
fips_end_app()
target_compile_definitions(bufferoffsets-sapp-ui PRIVATE USE_DBG_UI)

fips_ide_group(cube)
fips_begin_app(cube-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(cube-sapp.c)
    fips_deps(sokol)
fips_end_app()
fips_begin_app(cube-sapp-ui windowed)
    fips_vs_warning_level(3)
    fips_files(cube-sapp.c)
    fips_deps(sokol dbgui imgui)
fips_end_app()
target_compile_definitions(cube-sapp-ui PRIVATE USE_DBG_UI)

fips_ide_group(noninterleaved)
fips_begin_app(noninterleaved-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(noninterleaved-sapp.c)
    fips_deps(sokol)
fips_end_app()
fips_begin_app(noninterleaved-sapp-ui windowed)
    fips_vs_warning_level(3)
    fips_files(noninterleaved-sapp.c)
    fips_deps(sokol dbgui imgui)
fips_end_app()
target_compile_definitions(noninterleaved-sapp-ui PRIVATE USE_DBG_UI)

fips_ide_group(texcube)
fips_begin_app(texcube-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(texcube-sapp.c)
    fips_deps(sokol)
fips_end_app()
fips_begin_app(texcube-sapp-ui windowed)
    fips_vs_warning_level(3)
    fips_files(texcube-sapp.c)
    fips_deps(sokol dbgui imgui)
fips_end_app()
target_compile_definitions(texcube-sapp-ui PRIVATE USE_DBG_UI)

fips_ide_group(offscreen)
fips_begin_app(offscreen-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(offscreen-sapp.c)
    fips_deps(sokol)
fips_end_app()
fips_begin_app(offscreen-sapp-ui windowed)
    fips_vs_warning_level(3)
    fips_files(offscreen-sapp.c)
    fips_deps(sokol dbgui imgui)
fips_end_app()
target_compile_definitions(offscreen-sapp-ui PRIVATE USE_DBG_UI)

fips_ide_group(instancing)
fips_begin_app(instancing-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(instancing-sapp.c)
    fips_deps(sokol)
fips_end_app()
fips_begin_app(instancing-sapp-ui windowed)
    fips_vs_warning_level(3)
    fips_files(instancing-sapp.c)
    fips_deps(sokol dbgui imgui)
fips_end_app()
target_compile_definitions(instancing-sapp-ui PRIVATE USE_DBG_UI)

fips_ide_group(mrt)
fips_begin_app(mrt-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(mrt-sapp.c)
    fips_deps(sokol)
fips_end_app()
fips_begin_app(mrt-sapp-ui windowed)
    fips_vs_warning_level(3)
    fips_files(mrt-sapp.c)
    fips_deps(sokol dbgui imgui)
fips_end_app()
target_compile_definitions(mrt-sapp-ui PRIVATE USE_DBG_UI)

fips_ide_group(arraytex)
fips_begin_app(arraytex-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(arraytex-sapp.c)
    fips_deps(sokol)
fips_end_app()
fips_begin_app(arraytex-sapp-ui windowed)
    fips_vs_warning_level(3)
    fips_files(arraytex-sapp.c)
    fips_deps(sokol dbgui imgui)
fips_end_app()
target_compile_definitions(arraytex-sapp-ui PRIVATE USE_DBG_UI)

fips_ide_group(dyntex)
fips_begin_app(dyntex-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(dyntex-sapp.c)
    fips_deps(sokol)
fips_end_app()
fips_begin_app(dyntex-sapp-ui windowed)
    fips_vs_warning_level(3)
    fips_files(dyntex-sapp.c)
    fips_deps(sokol dbgui imgui)
fips_end_app()
target_compile_definitions(dyntex-sapp-ui PRIVATE USE_DBG_UI)

fips_ide_group(mipmap)
fips_begin_app(mipmap-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(mipmap-sapp.c)
    fips_deps(sokol)
fips_end_app()
fips_begin_app(mipmap-sapp-ui windowed)
    fips_vs_warning_level(3)
    fips_files(mipmap-sapp.c)
    fips_deps(sokol dbgui imgui)
fips_end_app()
target_compile_definitions(mipmap-sapp-ui PRIVATE USE_DBG_UI)

fips_ide_group(blend)
fips_begin_app(blend-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(blend-sapp.c)
    fips_deps(sokol)
fips_end_app()
fips_begin_app(blend-sapp-ui windowed)
    fips_vs_warning_level(3)
    fips_files(blend-sapp.c)
    fips_deps(sokol dbgui imgui)
fips_end_app()
target_compile_definitions(blend-sapp-ui PRIVATE USE_DBG_UI)

fips_ide_group(imgui)
fips_begin_app(imgui-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(imgui-sapp.cc)
    fips_deps(sokol imgui)
    if (FIPS_IOS)
        fips_files(ios-info.plist)
    endif()
fips_end_app()

fips_begin_app(imgui-highdpi-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(imgui-highdpi-sapp.cc)
    fips_deps(sokol imgui)
    if (FIPS_IOS)
        fips_files(ios-info.plist)
    endif()
fips_end_app()

fips_ide_group(saudio)
fips_begin_app(saudio-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(saudio-sapp.c)
    fips_deps(sokol)
    if (FIPS_IOS)
        fips_files(ios-info.plist)
    endif()
fips_end_app()

fips_ide_group(events)
fips_begin_app(events-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(events-sapp.c)
    fips_deps(sokol)
    if (FIPS_IOS)
        fips_files(ios-info.plist)
    endif()
fips_end_app()

fips_ide_group(modplay)
fips_begin_app(modplay-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(modplay-sapp.c)
    if (FIPS_IOS)
        fips_files(ios-info.plist)
    endif()
    fips_dir(data)
    fips_generate(FROM mods.yml TYPE dump HEADER mods.h)
    fips_deps(sokol libmodplug)
fips_end_app()

fips_ide_group(sgl)
fips_begin_app(sgl-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(sgl-sapp.c)
    fips_deps(sokol)
fips_end_app()
fips_begin_app(sgl-sapp-ui windowed)
    fips_vs_warning_level(3)
    fips_files(sgl-sapp.c)
    fips_deps(sokol dbgui imgui)
fips_end_app()
target_compile_definitions(sgl-sapp-ui PRIVATE USE_DBG_UI)

fips_ide_group(sgl-lines)
fips_begin_app(sgl-lines-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(sgl-lines-sapp.c)
    fips_deps(sokol)
fips_end_app()
fips_begin_app(sgl-lines-sapp-ui windowed)
    fips_vs_warning_level(3)
    fips_files(sgl-lines-sapp.c)
    fips_deps(sokol dbgui imgui)
fips_end_app()
target_compile_definitions(sgl-lines-sapp-ui PRIVATE USE_DBG_UI)

fips_ide_group(sgl-microui)
fips_begin_app(sgl-microui-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(sgl-microui-sapp.c)
    fips_deps(sokol microui)
fips_end_app()
fips_begin_app(sgl-microui-sapp-ui windowed)
    fips_vs_warning_level(3)
    fips_files(sgl-microui-sapp.c)
    fips_deps(sokol dbgui imgui microui)
fips_end_app()
target_compile_definitions(sgl-microui-sapp-ui PRIVATE USE_DBG_UI)

fips_ide_group(cubemaprt)
fips_begin_app(cubemaprt-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(cubemaprt-sapp.c)
    fips_deps(sokol)
fips_end_app()

#fips_begin_app(cubemaprt-sapp-ui windowed)
#    fips_vs_warning_level(3)
#    fips_files(cubemaprt-sapp.c)
#    fips_deps(sokol dbgui imgui)
#fips_end_app()
#target_compile_definitions(cubemaprt-sapp-ui PRIVATE USE_DBG_UI)

if (NOT FIPS_ANDROID)
fips_ide_group(noentry)
fips_begin_app(noentry-sapp windowed)
    fips_vs_warning_level(3)
    fips_files(noentry-sapp.c)
    fips_deps(sokol-noentry)
fips_end_app()
endif()
