sokol_config()
include_directories(common)
add_subdirectory(functional)

if (FIPS_OSX)
    # on Apple with Metal, must compile as Objective-C++
    fips_begin_app(objcpp-compile-test cmdline)
        fips_files(objcpp-compile-test.mm)
        sokol_shader(shader.glsl ${slang})
        if (FIPS_IOS)
            fips_frameworks_osx(UIKit AudioToolbox AVFoundation)
            if (SOKOL_USE_METAL)
                fips_frameworks_osx(Metal MetalKit)
            else()
                fips_frameworks_osx(OpenGLES GLKit)
            endif()
        else()
            if (SOKOL_USE_METAL)
                fips_frameworks_osx(Cocoa QuartzCore Metal MetalKit AudioToolbox)
            else()
                fips_frameworks_osx(Cocoa QuartzCore OpenGL AudioToolbox)
            endif()
        endif()
    fips_end_app()
elseif (NOT FIPS_UWP)
    fips_begin_app(cpp-compile-test cmdline)
        fips_vs_warning_level(4)
        fips_files(cpp-compile-test.cc)
        sokol_shader(shader.glsl ${slang})
        fips_deps(cimgui)
        if (FIPS_ANDROID)
            fips_libs(GLESv3 EGL OpenSLES log android)
        elseif (FIPS_LINUX)
            fips_libs(X11 Xi Xcursor GL m dl asound)
        endif()
    fips_end_app()
endif()
